Set all text lowercase

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "002efa45",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "15507281",
    "metadata": {},
    "outputs": [
@@ -315,7 +315,7 @@
        "[5279 rows x 4 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "828001a4",
    "metadata": {},
    "outputs": [],
@@ -338,6 +338,9 @@
     "def clean_text(line):\n",
     "    if pd.isna(line):\n",
     "        return line\n",
+    "    \n",
+    "    #Lower case the text\n",
+    "    line = line.lower()\n",
     "    \n",
     "    #Remove URLs\n",
     "    line = re.sub(r'http\\S+|www.\\S+', '', line)\n",
@@ -367,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "id": "dd1f8072",
    "metadata": {},
    "outputs": [
@@ -402,21 +405,21 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>sexism2022_english-9609</td>\n",
-       "      <td>In Nigeria, if you rape a woman, the men rape ...</td>\n",
+       "      <td>in nigeria, if you rape a woman, the men rape ...</td>\n",
        "      <td>not sexist</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>sexism2022_english-16993</td>\n",
-       "      <td>Then, she's a keeper.</td>\n",
+       "      <td>then, she's a keeper.</td>\n",
        "      <td>not sexist</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>sexism2022_english-13149</td>\n",
-       "      <td>This is like the Metallica video where the poo...</td>\n",
+       "      <td>this is like the metallica video where the poo...</td>\n",
        "      <td>not sexist</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
@@ -430,7 +433,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>sexism2022_english-966</td>\n",
-       "      <td>I bet she wished she had a gun</td>\n",
+       "      <td>i bet she wished she had a gun</td>\n",
        "      <td>not sexist</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
@@ -444,35 +447,35 @@
        "    <tr>\n",
        "      <th>5274</th>\n",
        "      <td>sexism2022_english-4599</td>\n",
-       "      <td>Only if you make it clear you're not looking f...</td>\n",
+       "      <td>only if you make it clear you're not looking f...</td>\n",
        "      <td>not sexist</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5275</th>\n",
        "      <td>sexism2022_english-1196</td>\n",
-       "      <td>It was like a big sisterhood all stemming from...</td>\n",
+       "      <td>it was like a big sisterhood all stemming from...</td>\n",
        "      <td>sexist</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5276</th>\n",
        "      <td>sexism2022_english-9772</td>\n",
-       "      <td>It goes like this: I'm on the dance floor and ...</td>\n",
+       "      <td>it goes like this: i'm on the dance floor and ...</td>\n",
        "      <td>not sexist</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5277</th>\n",
        "      <td>sexism2022_english-14511</td>\n",
-       "      <td>It could be like for the ladies' corner of you...</td>\n",
+       "      <td>it could be like for the ladies' corner of you...</td>\n",
        "      <td>sexist</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5278</th>\n",
        "      <td>sexism2022_english-9538</td>\n",
-       "      <td>Yea. Most trans women hate men.</td>\n",
+       "      <td>yea. most trans women hate men.</td>\n",
        "      <td>sexist</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
@@ -496,22 +499,22 @@
        "5278   sexism2022_english-9538   \n",
        "\n",
        "                                                   text       label  split  \n",
-       "0     In Nigeria, if you rape a woman, the men rape ...  not sexist  train  \n",
-       "1                                 Then, she's a keeper.  not sexist  train  \n",
-       "2     This is like the Metallica video where the poo...  not sexist  train  \n",
+       "0     in nigeria, if you rape a woman, the men rape ...  not sexist  train  \n",
+       "1                                 then, she's a keeper.  not sexist  train  \n",
+       "2     this is like the metallica video where the poo...  not sexist  train  \n",
        "3                                                woman?  not sexist  train  \n",
-       "4                        I bet she wished she had a gun  not sexist  train  \n",
+       "4                        i bet she wished she had a gun  not sexist  train  \n",
        "...                                                 ...         ...    ...  \n",
-       "5274  Only if you make it clear you're not looking f...  not sexist  train  \n",
-       "5275  It was like a big sisterhood all stemming from...      sexist   test  \n",
-       "5276  It goes like this: I'm on the dance floor and ...  not sexist   test  \n",
-       "5277  It could be like for the ladies' corner of you...      sexist   test  \n",
-       "5278                    Yea. Most trans women hate men.      sexist  train  \n",
+       "5274  only if you make it clear you're not looking f...  not sexist  train  \n",
+       "5275  it was like a big sisterhood all stemming from...      sexist   test  \n",
+       "5276  it goes like this: i'm on the dance floor and ...  not sexist   test  \n",
+       "5277  it could be like for the ladies' corner of you...      sexist   test  \n",
+       "5278                    yea. most trans women hate men.      sexist  train  \n",
        "\n",
        "[5279 rows x 4 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "id": "f4bb516d",
    "metadata": {},
    "outputs": [],
@@ -536,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "id": "c9c49881",
    "metadata": {},
    "outputs": [
@@ -571,35 +574,35 @@
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>sexism2022_english-845</td>\n",
-       "      <td>Fuck the niggers and the jews. Both have a his...</td>\n",
+       "      <td>fuck the niggers and the jews. both have a his...</td>\n",
        "      <td>not sexist</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
        "      <td>sexism2022_english-6629</td>\n",
-       "      <td>Well then good because someone has to knock he...</td>\n",
+       "      <td>well then good because someone has to knock he...</td>\n",
        "      <td>sexist</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>35</th>\n",
        "      <td>sexism2022_english-17573</td>\n",
-       "      <td>#USA #Texas #Islam #Muslims #Islamization #Sha...</td>\n",
+       "      <td>#usa #texas #islam #muslims #islamization #sha...</td>\n",
        "      <td>not sexist</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38</th>\n",
        "      <td>sexism2022_english-10268</td>\n",
-       "      <td>Yes, normal women want to be dominated. Social...</td>\n",
+       "      <td>yes, normal women want to be dominated. social...</td>\n",
        "      <td>sexist</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>44</th>\n",
        "      <td>sexism2022_english-10735</td>\n",
-       "      <td>She didn't have to be a bitch about it. She li...</td>\n",
+       "      <td>she didn't have to be a bitch about it. she li...</td>\n",
        "      <td>sexist</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
@@ -613,35 +616,35 @@
        "    <tr>\n",
        "      <th>5268</th>\n",
        "      <td>sexism2022_english-19421</td>\n",
-       "      <td>So did you break it off with her then.</td>\n",
+       "      <td>so did you break it off with her then.</td>\n",
        "      <td>not sexist</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5270</th>\n",
        "      <td>sexism2022_english-15150</td>\n",
-       "      <td>In early middle school I was physically bullie...</td>\n",
+       "      <td>in early middle school i was physically bullie...</td>\n",
        "      <td>sexist</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5275</th>\n",
        "      <td>sexism2022_english-1196</td>\n",
-       "      <td>It was like a big sisterhood all stemming from...</td>\n",
+       "      <td>it was like a big sisterhood all stemming from...</td>\n",
        "      <td>sexist</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5276</th>\n",
        "      <td>sexism2022_english-9772</td>\n",
-       "      <td>It goes like this: I'm on the dance floor and ...</td>\n",
+       "      <td>it goes like this: i'm on the dance floor and ...</td>\n",
        "      <td>not sexist</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5277</th>\n",
        "      <td>sexism2022_english-14511</td>\n",
-       "      <td>It could be like for the ladies' corner of you...</td>\n",
+       "      <td>it could be like for the ladies' corner of you...</td>\n",
        "      <td>sexist</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
@@ -665,22 +668,22 @@
        "5277  sexism2022_english-14511   \n",
        "\n",
        "                                                   text       label split  \n",
-       "21    Fuck the niggers and the jews. Both have a his...  not sexist  test  \n",
-       "27    Well then good because someone has to knock he...      sexist  test  \n",
-       "35    #USA #Texas #Islam #Muslims #Islamization #Sha...  not sexist  test  \n",
-       "38    Yes, normal women want to be dominated. Social...      sexist  test  \n",
-       "44    She didn't have to be a bitch about it. She li...      sexist  test  \n",
+       "21    fuck the niggers and the jews. both have a his...  not sexist  test  \n",
+       "27    well then good because someone has to knock he...      sexist  test  \n",
+       "35    #usa #texas #islam #muslims #islamization #sha...  not sexist  test  \n",
+       "38    yes, normal women want to be dominated. social...      sexist  test  \n",
+       "44    she didn't have to be a bitch about it. she li...      sexist  test  \n",
        "...                                                 ...         ...   ...  \n",
-       "5268             So did you break it off with her then.  not sexist  test  \n",
-       "5270  In early middle school I was physically bullie...      sexist  test  \n",
-       "5275  It was like a big sisterhood all stemming from...      sexist  test  \n",
-       "5276  It goes like this: I'm on the dance floor and ...  not sexist  test  \n",
-       "5277  It could be like for the ladies' corner of you...      sexist  test  \n",
+       "5268             so did you break it off with her then.  not sexist  test  \n",
+       "5270  in early middle school i was physically bullie...      sexist  test  \n",
+       "5275  it was like a big sisterhood all stemming from...      sexist  test  \n",
+       "5276  it goes like this: i'm on the dance floor and ...  not sexist  test  \n",
+       "5277  it could be like for the ladies' corner of you...      sexist  test  \n",
        "\n",
        "[1086 rows x 4 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "id": "b4a943b0",
    "metadata": {},
    "outputs": [
@@ -727,21 +730,21 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>sexism2022_english-9609</td>\n",
-       "      <td>In Nigeria, if you rape a woman, the men rape ...</td>\n",
+       "      <td>in nigeria, if you rape a woman, the men rape ...</td>\n",
        "      <td>not sexist</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>sexism2022_english-16993</td>\n",
-       "      <td>Then, she's a keeper.</td>\n",
+       "      <td>then, she's a keeper.</td>\n",
        "      <td>not sexist</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>sexism2022_english-13149</td>\n",
-       "      <td>This is like the Metallica video where the poo...</td>\n",
+       "      <td>this is like the metallica video where the poo...</td>\n",
        "      <td>not sexist</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
@@ -755,7 +758,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>sexism2022_english-966</td>\n",
-       "      <td>I bet she wished she had a gun</td>\n",
+       "      <td>i bet she wished she had a gun</td>\n",
        "      <td>not sexist</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
@@ -769,14 +772,14 @@
        "    <tr>\n",
        "      <th>5271</th>\n",
        "      <td>sexism2022_english-19863</td>\n",
-       "      <td>Supporting toxic men and glorifying toxic male...</td>\n",
+       "      <td>supporting toxic men and glorifying toxic male...</td>\n",
        "      <td>sexist</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5272</th>\n",
        "      <td>sexism2022_english-18722</td>\n",
-       "      <td>Find a girl with common beliefs. I have. They ...</td>\n",
+       "      <td>find a girl with common beliefs. i have. they ...</td>\n",
        "      <td>not sexist</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
@@ -790,14 +793,14 @@
        "    <tr>\n",
        "      <th>5274</th>\n",
        "      <td>sexism2022_english-4599</td>\n",
-       "      <td>Only if you make it clear you're not looking f...</td>\n",
+       "      <td>only if you make it clear you're not looking f...</td>\n",
        "      <td>not sexist</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5278</th>\n",
        "      <td>sexism2022_english-9538</td>\n",
-       "      <td>Yea. Most trans women hate men.</td>\n",
+       "      <td>yea. most trans women hate men.</td>\n",
        "      <td>sexist</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
@@ -821,22 +824,22 @@
        "5278   sexism2022_english-9538   \n",
        "\n",
        "                                                   text       label  split  \n",
-       "0     In Nigeria, if you rape a woman, the men rape ...  not sexist  train  \n",
-       "1                                 Then, she's a keeper.  not sexist  train  \n",
-       "2     This is like the Metallica video where the poo...  not sexist  train  \n",
+       "0     in nigeria, if you rape a woman, the men rape ...  not sexist  train  \n",
+       "1                                 then, she's a keeper.  not sexist  train  \n",
+       "2     this is like the metallica video where the poo...  not sexist  train  \n",
        "3                                                woman?  not sexist  train  \n",
-       "4                        I bet she wished she had a gun  not sexist  train  \n",
+       "4                        i bet she wished she had a gun  not sexist  train  \n",
        "...                                                 ...         ...    ...  \n",
-       "5271  Supporting toxic men and glorifying toxic male...      sexist  train  \n",
-       "5272  Find a girl with common beliefs. I have. They ...  not sexist  train  \n",
+       "5271  supporting toxic men and glorifying toxic male...      sexist  train  \n",
+       "5272  find a girl with common beliefs. i have. they ...  not sexist  train  \n",
        "5273  not to mention that she's an outright commie w...  not sexist  train  \n",
-       "5274  Only if you make it clear you're not looking f...  not sexist  train  \n",
-       "5278                    Yea. Most trans women hate men.      sexist  train  \n",
+       "5274  only if you make it clear you're not looking f...  not sexist  train  \n",
+       "5278                    yea. most trans women hate men.      sexist  train  \n",
        "\n",
        "[4193 rows x 4 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
