--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "b4a943b0",
    "metadata": {},
    "outputs": [
@@ -847,6 +847,14 @@
    "source": [
     "#Verify train set\n",
     "train_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6bd849d8",
+   "metadata": {},
+   "source": [
+    "# 2.Feature Engineering"
    ]
   }
  ],
