--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 54,
    "id": "002efa45",
    "metadata": {},
    "outputs": [],
@@ -158,6 +158,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
+    "from collections import defaultdict\n",
     "import re"
    ]
   },
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 55,
    "id": "15507281",
    "metadata": {},
    "outputs": [
@@ -315,7 +316,7 @@
        "[5279 rows x 4 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "id": "828001a4",
    "metadata": {},
    "outputs": [],
@@ -370,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "id": "dd1f8072",
    "metadata": {},
    "outputs": [
@@ -514,7 +515,7 @@
        "[5279 rows x 4 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 58,
    "id": "f4bb516d",
    "metadata": {},
    "outputs": [],
@@ -539,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 59,
    "id": "c9c49881",
    "metadata": {},
    "outputs": [
@@ -683,7 +684,7 @@
        "[1086 rows x 4 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "b4a943b0",
    "metadata": {},
    "outputs": [
@@ -839,7 +840,7 @@
        "[4193 rows x 4 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,6 +856,84 @@
    "metadata": {},
    "source": [
     "# 2.Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54174912",
+   "metadata": {},
+   "source": [
+    "## Method 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f04ec09f",
+   "metadata": {},
+   "source": [
+    "## Method 2: N-grams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "b27bec6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Feature extraction: N-grams\n",
+    "from collections import defaultdict\n",
+    "from sklearn.feature_extraction.text import ENGLISH_STOP_WORDS\n",
+    "\n",
+    "# Function to generate n-grams from text, filtering stopwords\n",
+    "def generate_ngrams(text, n=1):\n",
+    "    # Split text and remove stopwords\n",
+    "    words = [w for w in text.split() if w not in ENGLISH_STOP_WORDS]\n",
+    "    # Generate n-grams\n",
+    "    ngrams_list = zip(*[words[i:] for i in range(n)])\n",
+    "    return [' '.join(ng) for ng in ngrams_list]\n",
+    "\n",
+    "# Dictionaries to store counts for sexist and non-sexist classes\n",
+    "sexist_ngrams = defaultdict(int)\n",
+    "nonsexist_ngrams = defaultdict(int)\n",
+    "\n",
+    "# Loop through training data and count n-grams\n",
+    "for text, label in zip(train_df['text'], train_df['label']):\n",
+    "    for n in [1, 2, 3]:\n",
+    "        for ng in generate_ngrams(text, n):\n",
+    "            if label == 'sexist':\n",
+    "                sexist_ngrams[ng] += 1\n",
+    "            else:\n",
+    "                nonsexist_ngrams[ng] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "c35f532f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 10 n-grams for sexist class:\n",
+      "[('women', 386), ('like', 172), ('men', 145), ('just', 141), ('woman', 92), ('bitch', 87), (\"don't\", 86), ('want', 82), (\"it's\", 79), ('[url]', 78)]\n",
+      "\n",
+      "Top 10 n-grams for non-sexist class:\n",
+      "[('[url]', 428), ('just', 352), ('women', 322), ('like', 314), (\"don't\", 198), ('[user]', 184), (\"it's\", 167), ('woman', 145), ('girl', 141), ('want', 135)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Verify if the method was applied correctly\n",
+    "from collections import Counter\n",
+    "\n",
+    "print(\"Top 10 n-grams for sexist class:\")\n",
+    "print(Counter(sexist_ngrams).most_common(10))\n",
+    "\n",
+    "print(\"\\nTop 10 n-grams for non-sexist class:\")\n",
+    "print(Counter(nonsexist_ngrams).most_common(10))\n"
    ]
   }
  ],
