--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -935,6 +935,14 @@
     "print(\"\\nTop 10 n-grams for non-sexist class:\")\n",
     "print(Counter(nonsexist_ngrams).most_common(10))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba710505",
+   "metadata": {},
+   "source": [
+    "Nithyashree. (2021, September 13). What are N-grams and how to implement them in Python? Analytics Vidhya. https://www.analyticsvidhya.com/blog/2021/09/what-are-n-grams-and-how-to-implement-them-in-python"
+   ]
   }
  ],
  "metadata": {
