--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "828001a4",
    "metadata": {},
    "outputs": [],
@@ -348,21 +348,11 @@
     "    \n",
     "    #Remove @mentions\n",
     "    line = re.sub(r'@\\w+', '', line)\n",
-    "    \n",
-    "    #Remove emojis (Unicode ranges)\n",
-    "    emoji_pattern = re.compile(\n",
-    "        \"[\"\n",
-    "        u\"\\U0001F600-\\U0001F64F\"\n",
-    "        u\"\\U0001F300-\\U0001F5FF\"\n",
-    "        u\"\\U0001F680-\\U0001F6FF\"\n",
-    "        u\"\\U0001F1E0-\\U0001F1FF\"\n",
-    "        u\"\\U00002702-\\U000027B0\"\n",
-    "        u\"\\U000024C2-\\U0001F251\"\n",
-    "        \"]+\",\n",
-    "        flags=re.UNICODE\n",
-    "    )\n",
-    "    line = emoji_pattern.sub(r'', line)\n",
-    "    \n",
+    "\n",
+    "    #Remove [user] and [url]\n",
+    "    line = re.sub(r'\\[user\\]', '', line)\n",
+    "    line = re.sub(r'\\[url\\]', '', line)\n",
+    "\n",
     "    #Remove multiple spaces\n",
     "    line = re.sub(r'\\s+', ' ', line).strip()\n",
     "\n",
