Taking back de emojis and remove url and user

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "id": "002efa45",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "id": "15507281",
    "metadata": {},
    "outputs": [
@@ -316,7 +316,7 @@
        "[5279 rows x 4 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "828001a4",
    "metadata": {},
    "outputs": [],
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "id": "dd1f8072",
    "metadata": {},
    "outputs": [
@@ -403,7 +403,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>sexism2022_english-16993</td>\n",
-       "      <td>then, she's a keeper.</td>\n",
+       "      <td>then, she's a keeper. 😉</td>\n",
        "      <td>not sexist</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
@@ -491,7 +491,7 @@
        "\n",
        "                                                   text       label  split  \n",
        "0     in nigeria, if you rape a woman, the men rape ...  not sexist  train  \n",
-       "1                                 then, she's a keeper.  not sexist  train  \n",
+       "1                               then, she's a keeper. 😉  not sexist  train  \n",
        "2     this is like the metallica video where the poo...  not sexist  train  \n",
        "3                                                woman?  not sexist  train  \n",
        "4                        i bet she wished she had a gun  not sexist  train  \n",
@@ -505,7 +505,7 @@
        "[5279 rows x 4 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "id": "f4bb516d",
    "metadata": {},
    "outputs": [],
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "id": "c9c49881",
    "metadata": {},
    "outputs": [
@@ -674,7 +674,7 @@
        "[1086 rows x 4 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "id": "b4a943b0",
    "metadata": {},
    "outputs": [
@@ -728,7 +728,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>sexism2022_english-16993</td>\n",
-       "      <td>then, she's a keeper.</td>\n",
+       "      <td>then, she's a keeper. 😉</td>\n",
        "      <td>not sexist</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
@@ -816,7 +816,7 @@
        "\n",
        "                                                   text       label  split  \n",
        "0     in nigeria, if you rape a woman, the men rape ...  not sexist  train  \n",
-       "1                                 then, she's a keeper.  not sexist  train  \n",
+       "1                               then, she's a keeper. 😉  not sexist  train  \n",
        "2     this is like the metallica video where the poo...  not sexist  train  \n",
        "3                                                woman?  not sexist  train  \n",
        "4                        i bet she wished she had a gun  not sexist  train  \n",
@@ -830,7 +830,7 @@
        "[4193 rows x 4 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "id": "b27bec6e",
    "metadata": {},
    "outputs": [],
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 18,
    "id": "c35f532f",
    "metadata": {},
    "outputs": [
@@ -908,10 +908,10 @@
      "output_type": "stream",
      "text": [
       "Top 10 n-grams for sexist class:\n",
-      "[('women', 386), ('like', 172), ('men', 145), ('just', 141), ('woman', 92), ('bitch', 87), (\"don't\", 86), ('want', 82), (\"it's\", 79), ('[url]', 78)]\n",
+      "[('women', 386), ('like', 172), ('men', 145), ('just', 141), ('woman', 92), ('bitch', 87), (\"don't\", 86), ('want', 82), (\"it's\", 79), ('female', 71)]\n",
       "\n",
       "Top 10 n-grams for non-sexist class:\n",
-      "[('[url]', 428), ('just', 352), ('women', 322), ('like', 314), (\"don't\", 198), ('[user]', 184), (\"it's\", 167), ('woman', 145), ('girl', 141), ('want', 135)]\n"
+      "[('just', 352), ('women', 322), ('like', 314), (\"don't\", 198), (\"it's\", 167), ('woman', 145), ('girl', 141), ('want', 135), ('people', 133), (\"i'm\", 128)]\n"
      ]
     }
    ],
