Method #1:Completed - Model #1:In process

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -78,19 +78,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "6156cb23",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Rena Wang"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "13f3da4e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Marco Antonio Gonzalez Fernandez"
+   ]
   },
   {
    "cell_type": "code",
@@ -150,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "id": "002efa45",
    "metadata": {},
    "outputs": [],
@@ -172,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "id": "15507281",
    "metadata": {},
    "outputs": [
@@ -316,7 +320,7 @@
        "[5279 rows x 4 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "id": "828001a4",
    "metadata": {},
    "outputs": [],
@@ -361,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "id": "dd1f8072",
    "metadata": {},
    "outputs": [
@@ -505,7 +509,7 @@
        "[5279 rows x 4 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "id": "f4bb516d",
    "metadata": {},
    "outputs": [],
@@ -530,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "id": "c9c49881",
    "metadata": {},
    "outputs": [
@@ -674,7 +678,7 @@
        "[1086 rows x 4 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "id": "b4a943b0",
    "metadata": {},
    "outputs": [
@@ -830,7 +834,7 @@
        "[4193 rows x 4 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "id": "b27bec6e",
    "metadata": {},
    "outputs": [],
@@ -899,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 46,
    "id": "c35f532f",
    "metadata": {},
    "outputs": [
@@ -927,12 +931,77 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b20c0dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N-gram feature matrix created!\n",
+      "Train shape: (4193, 6472)\n",
+      "Test shape: (1086, 6472)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
+    "\n",
+    "#TF-IDF with n-grams 1 to 3\n",
+    "ngram_vectorizer = TfidfVectorizer(\n",
+    "    ngram_range=(1,3),\n",
+    "    stop_words='english',\n",
+    "    min_df=2\n",
+    ")\n",
+    "\n",
+    "# Fit ONLY on training set (very important for Rule 1)\n",
+    "X_train_ngrams = ngram_vectorizer.fit_transform(train_df['text'])\n",
+    "\n",
+    "# Transform test set using the train vocabulary\n",
+    "X_test_ngrams = ngram_vectorizer.transform(test_df['text'])\n",
+    "\n",
+    "# Labels\n",
+    "y_train = train_df['label']\n",
+    "y_test = test_df['label']\n",
+    "\n",
+    "print(\"N-gram feature matrix created!\")\n",
+    "print(\"Train shape:\", X_train_ngrams.shape)\n",
+    "print(\"Test shape:\", X_test_ngrams.shape)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ba710505",
    "metadata": {},
    "source": [
     "Nithyashree. (2021, September 13). What are N-grams and how to implement them in Python? Analytics Vidhya. https://www.analyticsvidhya.com/blog/2021/09/what-are-n-grams-and-how-to-implement-them-in-python"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e46ec5f",
+   "metadata": {},
+   "source": [
+    "# 3. Model Selection and Architecture"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f1af430",
+   "metadata": {},
+   "source": [
+    "## Model 1 - Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53603abd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
