--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "26348285",
    "metadata": {},
    "outputs": [
@@ -1079,7 +1079,8 @@
     "plt.title(\"Confusion Matrix - Logistic Regression (N-grams)\")\n",
     "plt.xlabel(\"Predicted\")\n",
     "plt.ylabel(\"Actual\")\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "#LOL\n"
    ]
   },
   {
